--- a/client/src/app/pages/cars-portal/cars-portal.component.html
+++ b/client/src/app/pages/cars-portal/cars-portal.component.html
@@ -10,7 +10,7 @@
             <tr>
                 <th>Model</th>
                 <th>Make</th>
-                <th>Yaer</th>
+                <th>Year</th>
                 <th>Price</th>
                 <th>Options</th>
             </tr>
