--- a/client/src/app/pages/users-portal/users-portal.component.html
+++ b/client/src/app/pages/users-portal/users-portal.component.html
@@ -3,7 +3,7 @@
         <ng-template pTemplate="caption">
             <div class="caption">
                 <h1>All users</h1>
-                <p-button label="Add sser" styleClass="p-button-secondary" [routerLink]="'/add-user'"></p-button>
+                <p-button label="Add User" styleClass="p-button-secondary" [routerLink]="'/add-user'"></p-button>
             </div>
         </ng-template>
         <ng-template pTemplate="header">
