--- a/client/src/app/pages/home/home.component.css
+++ b/client/src/app/pages/home/home.component.css
@@ -1,9 +1,9 @@
 .card{
-    height: 240px;
+    height: 270px;
     width: 800px;
-    background-color: rgba(237, 237, 237, 0.849);
+    background-color: rgba(241, 241, 241, 0.85);
     border: none;
-    border-radius: 5;
+    border-radius: 30px;
 }
 .container{
     display: flex;
