--- a/client/src/app/pages/register/register.component.html
+++ b/client/src/app/pages/register/register.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="ui-grid-col-4">
                     <div [hidden]="registerForm.controls['username'].valid || !registerForm.controls['username'].dirty" class="alert alert-danger">
-                        Login is required
+                        Username is required
                     </div>
                 </div>
             </div>
@@ -23,7 +23,7 @@
                 </div>
                 <div class="ui-grid-col-4">
                     <div [hidden]="registerForm.controls['email'].valid || !registerForm.controls['email'].dirty" class="alert alert-danger">
-                        Login is required
+                        Email is required
                     </div>
                 </div>
             </div>
