--- a/client/src/app/pages/add-user/add-user.component.html
+++ b/client/src/app/pages/add-user/add-user.component.html
@@ -1,1 +1,53 @@
-<p>add-user works!</p>
+<form (ngSubmit)="addUser()" [formGroup]="addUserForm" class="addUserForm" style="margin-bottom: 20px;">
+    <p-panel header="Add User">
+        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+            <div class="ui-grid-row">
+                <div class="ui-grid-col-2">
+                    Username:
+                </div>
+                <div class="ui-grid-col-6">
+                    <input pInputText type="text" formControlName="username" class="form-control" name="username">
+                </div>
+                <div class="ui-grid-col-4">
+                    <div [hidden]="addUserForm.controls['username'].valid || !addUserForm.controls['username'].dirty" class="alert alert-danger">
+                        Username is required
+                    </div>
+                </div>
+            </div>
+            <div class="ui-grid-row">
+                <div class="ui-grid-col-2">
+                    Email:
+                </div>
+                <div class="ui-grid-col-6">
+                    <input pInputText type="text" formControlName="email" class="form-control" name="email">
+                </div>
+                <div class="ui-grid-col-4">
+                    <div [hidden]="addUserForm.controls['email'].valid || !addUserForm.controls['email'].dirty" class="alert alert-danger">
+                        Email is required
+                    </div>
+                </div>
+            </div>
+            <div class="ui-grid-row">
+                <div class="ui-grid-col-2">
+                    Password:
+                </div>
+                <div class="ui-grid-col-6">
+                    <input pInputText type="password" formControlName="password" class="form-control" name="password">
+                </div>
+                <div class="ui-grid-col-4">
+                    <div [hidden]="addUserForm.controls['password'].valid || !addUserForm.controls['password'].dirty" class="alert alert-danger">
+                        Password is required
+                    </div>
+                </div>
+            </div>
+            <div class="ui-grid-row" id="buttonRegister">
+                <div class="ui-grid-col-2"></div>
+                <div class="ui-grid-col-6">
+                    <button  pButton type="submit" label="Submit" [disabled]="!addUserForm.valid"></button>
+                </div>
+                <div class="ui-grid-col-4"></div>
+            </div>
+        </div>
+    </p-panel>
+</form>
+
