--- a/client/src/app/pages/users-portal/users-portal.component.html
+++ b/client/src/app/pages/users-portal/users-portal.component.html
@@ -1,4 +1,4 @@
-<div class="center mt-5">
+<div class="center mt-5" style="margin-bottom: 30px;">
     <p-table [value]="users" [loading]="loading">
         <ng-template pTemplate="caption">
             <div class="caption">
