--- a/client/src/app/pages/cars-adds/cars-adds.component.css
+++ b/client/src/app/pages/cars-adds/cars-adds.component.css
@@ -1,9 +1,10 @@
 .card{
-    height: 240px;
-    width: 800px;
-    background-color: rgba(237, 237, 237, 0.849);
-    border: none;
-    border-radius: 5;
+  height: 290px;
+  width: 800px;
+  background-color: rgba(241, 241, 241, 0.85);
+  border: none;
+  border-radius: 30px;
+  padding-top: 30px;
 }
 /* .container{
     display: flex;
@@ -91,8 +92,6 @@
         transform: rotate(360deg);
     }   
 }
-
-
 .up-text{
   display: flex;
   justify-content: space-around;
