--- a/client/src/app/pages/cars-portal/cars-portal.component.html
+++ b/client/src/app/pages/cars-portal/cars-portal.component.html
@@ -1,4 +1,4 @@
-<div class="center mt-5">
+<div class="center mt-5" style="margin-bottom: 20px;">
     <p-table [value]="allCars" [loading]="loading" >
         <ng-template pTemplate="caption">
             <div class="caption">
